--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "adapt-contrib-resources",
-  "version": "5.8.0",
+  "version": "5.9.0",
   "framework": ">=5.19.1",
-  "homepage": "https://github.com/adaptlearning/adapt-contrib-resources",
-  "bugs": "https://github.com/adaptlearning/adapt-contrib-resources/issues",
+  "homepage": "https://github.com/Aleido-Learning/adapt-contrib-resources",
+  "bugs": "https://github.com/Aleido-Learning/adapt-contrib-resources/issues",
   "extension": "resources",
   "displayName": "Resources",
   "description": "An extension to allow learners to view resources",
@@ -14,66 +14,5 @@
   ],
   "license": "GPL-3.0",
   "targetAttribute": "_resources",
-  "private": true,
-  "devDependencies": {
-    "@semantic-release/commit-analyzer": "^9.0.2",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^8.0.5",
-    "@semantic-release/npm": "^9.0.1",
-    "@semantic-release/release-notes-generator": "^10.0.3",
-    "conventional-changelog-eslint": "^3.0.9",
-    "semantic-release": "^21.0.1",
-    "semantic-release-replace-plugin": "^1.2.7"
-  },
-  "scripts": {
-    "postversion": "cp package.json bower.json"
-  },
-  "release": {
-    "plugins": [
-      [
-        "@semantic-release/commit-analyzer",
-        {
-          "preset": "eslint"
-        }
-      ],
-      [
-        "@semantic-release/release-notes-generator",
-        {
-          "preset": "eslint"
-        }
-      ],
-      [
-        "semantic-release-replace-plugin",
-        {
-          "replacements": [
-            {
-              "files": "migrations/*.js",
-              "from": "@@CURRENT_VERSION",
-              "to": "${lastRelease.version}",
-              "countMatches": true
-            },
-            {
-              "files": "migrations/*.js",
-              "from": "@@RELEASE_VERSION",
-              "to": "${nextRelease.version}",
-              "countMatches": true
-            }
-          ]
-        }
-      ],
-      "@semantic-release/npm",
-      "@semantic-release/github",
-      [
-        "@semantic-release/git",
-        {
-          "assets": [
-            "package.json",
-            "bower.json",
-            "migrations/*.js"
-          ],
-          "message": "Chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
-        }
-      ]
-    ]
-  }
+  "private": true
 }
